--- a/proyecto/.classpath
+++ b/proyecto/.classpath
@@ -11,7 +11,7 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/jdbc"/>
-	<classpathentry kind="lib" path="D:/KEVIN/Downloads/ojdbc11.jar"/>
+	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.USER_LIBRARY/jdbc"/>
+	<classpathentry exported="true" kind="lib" path="D:/KEVIN/Downloads/ojdbc11.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
